Rapport - 2.Analyse completé

--- a/API 04_03/LovBooks/package.json
+++ b/API 04_03/LovBooks/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lovbooks",
   "version": "1.0.0",
-  "description": "LovBooks API",
+  "description": "LovBooks API - catalogue des livres",
   "main": "src/app.mjs",
   "scripts": {
     "start": "nodemon src/app.mjs"
